# ferret-osint

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: analyze.md  investigate.md
.github/workflows/: ci.yml
config/: settings.yaml
scripts/: bootstrap.sh  test_pipeline.py
src/osint_agent/: __init__.py  __main__.py  cache.py  config.py  console.py  graph_export.py  input_validation.py  key_validator.py  llm_analyze.py  llm_export.py  models.py  report.py  theme.py  timeline.py  vault_export.py
src/osint_agent/agent/: __init__.py
src/osint_agent/graph/: __init__.py  corroboration.py  memory_store.py  neo4j_store.py  resolver.py  sqlite_store.py  store.py
src/osint_agent/playbooks/: __init__.py  base.py  loop.py  name_to_surface.py  org_to_members.py  runner.py  username_to_identity.py
src/osint_agent/tools/: __init__.py  base.py  builtwith_adapter.py  commoncrawl.py  congress.py  courtlistener.py  crosslinked.py  crtsh.py  ddg_search.py  dns_enum.py  documentcloud.py  edgar.py  exiftool.py  fara.py  gravatar.py  holehe_adapter.py  ip_whois.py  littlesis.py  maigret.py  maigret_filters.py  muckrock.py  openfec.py  openpolicedata.py  patents.py  peoplesearch.py  phoneinfoga.py  propublica_nonprofit.py  reddit.py  registry.py  sbir.py  steam.py  theharvester.py  usaspending.py  wayback.py  wayback_ga.py  whois_lookup.py  ytdlp.py
tests/: test_base_adapter.py  test_builtwith_adapter.py  test_cache.py  test_chernobyl_timeline.py  test_commoncrawl_adapter.py  test_congress_adapter.py  test_corroboration.py  test_courtlistener_adapter.py  test_crosslinked_adapter.py  test_crtsh_adapter.py  test_ddg_search_adapter.py  test_dns_enum_adapter.py  test_documentcloud_adapter.py  test_edgar_adapter.py  test_entity_resolver.py  test_exiftool_adapter.py  test_fara_adapter.py  test_graph_export.py  test_gravatar_adapter.py  test_holehe_adapter.py  test_input_validation.py  test_integration.py  test_investigation_loop.py  test_ip_whois_adapter.py  test_key_validator.py  test_littlesis_adapter.py  test_llm_analyze.py  test_llm_export.py  test_maigret_adapter.py  test_memory_store.py  test_models.py  test_muckrock_adapter.py  test_openfec_adapter.py  test_openpolicedata_adapter.py  test_patents_adapter.py  test_peoplesearch_adapter.py  test_phoneinfoga_adapter.py  test_playbooks.py  test_propublica_nonprofit_adapter.py  test_reddit_adapter.py  (+16 more)
